conf/layer: add scarthgap compatibility
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,7 +21,7 @@ BBFILES_DYNAMIC += " \
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_virtualization-layer = "1"
-LAYERSERIES_COMPAT_virtualization-layer = "nanbield"
+LAYERSERIES_COMPAT_virtualization-layer = "nanbield scarthgap"
 LAYERDEPENDS_virtualization-layer = " \
     core \
     openembedded-layer \
